Remove games from UserReleaseProperties

--- a/notebooks/clean_main_db.ipynb
+++ b/notebooks/clean_main_db.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 70,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -20,12 +20,13 @@
     "\n",
     "# Not necessary in a py file as jupyter does not set the path correctly\n",
     "import os\n",
-    "os.chdir('hard_to_choose/')"
+    "if os.getcwd().split('\\\\')[-1] != global_imports.root_folder:\n",
+    "    os.chdir(global_imports.root_folder)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 71,
    "outputs": [],
    "source": [
     "def import_database_from_sql(sql_query,db_path):\n",
@@ -50,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 72,
    "outputs": [],
    "source": [
     "#Add any metadata needed to this list. Valid values are type names\n",
@@ -91,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 73,
    "outputs": [],
    "source": [
     "def extract_date(db):\n",
@@ -122,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 74,
    "outputs": [],
    "source": [
     "def create_platform(db):\n",
@@ -152,37 +153,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "               releaseKey                                    title      date  \\\n0    battlenet_1146311730                    {\"title\":\"Destiny 2\"}  2017 Sep   \n1    battlenet_1214607983         {\"title\":\"Heroes of the Storm®\"}  2015 Jun   \n2    battlenet_1465140039                 {\"title\":\"Hearthstone®\"}  2014 Mar   \n3         battlenet_17459                  {\"title\":\"Diablo® III\"}  2012 May   \n4         battlenet_21297        {\"title\":\"StarCraft® Remastered\"}  2017 Aug   \n..                    ...                                      ...       ...   \n652     xboxone_964706972                 {\"title\":\"No Man's Sky\"}  2016 Aug   \n653     xboxone_968775939                    {\"title\":\"Everspace\"}  2017 May   \n654     xboxone_974586226  {\"title\":\"We Happy Few (Game Preview)\"}  2018 Aug   \n655     xboxone_979032440           {\"title\":\"Supermarket Shriek\"}  2019 Jun   \n656     xboxone_983730484        {\"title\":\"ARK: Survival Evolved\"}  2017 Aug   \n\n          platform  isDlc  isVisibleInLibrary  \n0       Battle.net      0                   1  \n1       Battle.net      0                   1  \n2       Battle.net      0                   1  \n3       Battle.net      0                   1  \n4       Battle.net      0                   1  \n..             ...    ...                 ...  \n652  Xbox Gamepass      0                   1  \n653  Xbox Gamepass      0                   1  \n654  Xbox Gamepass      0                   1  \n655  Xbox Gamepass      0                   1  \n656  Xbox Gamepass      0                   1  \n\n[644 rows x 6 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>releaseKey</th>\n      <th>title</th>\n      <th>date</th>\n      <th>platform</th>\n      <th>isDlc</th>\n      <th>isVisibleInLibrary</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>battlenet_1146311730</td>\n      <td>{\"title\":\"Destiny 2\"}</td>\n      <td>2017 Sep</td>\n      <td>Battle.net</td>\n      <td>0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>battlenet_1214607983</td>\n      <td>{\"title\":\"Heroes of the Storm®\"}</td>\n      <td>2015 Jun</td>\n      <td>Battle.net</td>\n      <td>0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>battlenet_1465140039</td>\n      <td>{\"title\":\"Hearthstone®\"}</td>\n      <td>2014 Mar</td>\n      <td>Battle.net</td>\n      <td>0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>battlenet_17459</td>\n      <td>{\"title\":\"Diablo® III\"}</td>\n      <td>2012 May</td>\n      <td>Battle.net</td>\n      <td>0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>battlenet_21297</td>\n      <td>{\"title\":\"StarCraft® Remastered\"}</td>\n      <td>2017 Aug</td>\n      <td>Battle.net</td>\n      <td>0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>652</th>\n      <td>xboxone_964706972</td>\n      <td>{\"title\":\"No Man's Sky\"}</td>\n      <td>2016 Aug</td>\n      <td>Xbox Gamepass</td>\n      <td>0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>653</th>\n      <td>xboxone_968775939</td>\n      <td>{\"title\":\"Everspace\"}</td>\n      <td>2017 May</td>\n      <td>Xbox Gamepass</td>\n      <td>0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>654</th>\n      <td>xboxone_974586226</td>\n      <td>{\"title\":\"We Happy Few (Game Preview)\"}</td>\n      <td>2018 Aug</td>\n      <td>Xbox Gamepass</td>\n      <td>0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>655</th>\n      <td>xboxone_979032440</td>\n      <td>{\"title\":\"Supermarket Shriek\"}</td>\n      <td>2019 Jun</td>\n      <td>Xbox Gamepass</td>\n      <td>0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>656</th>\n      <td>xboxone_983730484</td>\n      <td>{\"title\":\"ARK: Survival Evolved\"}</td>\n      <td>2017 Aug</td>\n      <td>Xbox Gamepass</td>\n      <td>0</td>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n<p>644 rows × 6 columns</p>\n</div>"
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 75,
+   "outputs": [],
    "source": [
-    "def remove_hidden_games(db):\n",
+    "def remove_hidden_games_by_gog(db):\n",
     "    hidden_db_query = 'SELECT releaseKey, isDlc, isVisibleInLibrary FROM ReleaseProperties'\n",
     "    hidden_db = import_database_from_sql(hidden_db_query, global_imports.main_db_path)\n",
     "\n",
-    "# Merge is on left because every releaseKey in main_db is present in hidden_db\n",
-    "    db = db.merge(hidden_db, how='left', on='releaseKey')\n",
-    "\n",
-    "# Delete everything marked as DLC or not visible in library\n",
-    "    db = db.drop(db[(db['isVisibleInLibrary'] == 0) | (db['isDlc'] == 1)].index)\n",
-    "\n",
+    "    # Delete everything marked as DLC or not visible in library\n",
+    "    db = db[~db['releaseKey'].isin(hidden_db.loc[hidden_db['isVisibleInLibrary'] == 0, 'releaseKey'])]\n",
+    "    db = db[~db['releaseKey'].isin(hidden_db.loc[hidden_db['isDlc'] == 1, 'releaseKey'])]\n",
     "    return db\n",
     "\n",
-    "main_db = remove_hidden_games(main_db)"
+    "main_db = remove_hidden_games_by_gog(main_db)"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%% Hide games marked as DLC and hidden in the library itself\n"
+     "name": "#%% Remove games marked as DLC and hidden by GOG\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "outputs": [],
+   "source": [
+    "def remove_manual_hidden_games_by_user(db):\n",
+    "    user_hidden_db_query = 'SELECT releaseKey, isHidden FROM UserReleaseProperties'\n",
+    "    user_hidden_db = import_database_from_sql(user_hidden_db_query, global_imports.main_db_path)\n",
+    "\n",
+    "    # Remove games in main_db but not in user_hidden_db as these were never owned\n",
+    "    db = db.drop(db[~db['releaseKey'].isin(user_hidden_db['releaseKey'])].index)\n",
+    "    db = db[~db['releaseKey'].isin(user_hidden_db.loc[user_hidden_db['isHidden'] == 1, 'releaseKey'])]\n",
+    "    db = db.reset_index(drop=True)\n",
+    "    return db\n",
+    "\n",
+    "main_db = remove_manual_hidden_games_by_user(main_db)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% Remove games marked as DLC and hidden by user\n"
     }
    }
   }
