--- a/notebooks/clean_main_db.ipynb
+++ b/notebooks/clean_main_db.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 452,
+   "execution_count": 496,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 453,
+   "execution_count": 497,
    "outputs": [],
    "source": [
     "def import_database_from_sql(sql_query,db_path):\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 454,
+   "execution_count": 498,
    "outputs": [],
    "source": [
     "#Add any metadata needed to this list. Valid values are type names\n",
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 455,
+   "execution_count": 499,
    "outputs": [],
    "source": [
     "def extract_date(db):\n",
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 456,
+   "execution_count": 500,
    "outputs": [],
    "source": [
     "def create_platform(db):\n",
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 457,
+   "execution_count": 501,
    "outputs": [],
    "source": [
     "def remove_hidden_games_by_gog(db):\n",
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 458,
+   "execution_count": 502,
    "outputs": [],
    "source": [
     "def remove_manual_hidden_games_by_user(db):\n",
@@ -200,14 +200,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 459,
+   "execution_count": 503,
    "outputs": [
     {
      "data": {
       "text/plain": "                                releaseKey                              title  \\\n0                        battlenet_5272175                          Overwatch   \n1                     battlenet_prometheus                          Overwatch   \n2    epic_860a4feefe2a4f48905ae86c61d5db64  Lifeless Planet (Premier Edition)   \n3    epic_8e425d507bd6473dbb927f0fea8ef4f6                       Torchlight 2   \n4    epic_9d2d0eb64d5c44529cece33fe2a46482                 Grand Theft Auto 5   \n..                                     ...                                ...   \n574                      xboxone_945976112     Rush: A Disney Pixar Adventure   \n575                      xboxone_962495436                               JUJU   \n576                      xboxone_964706972                       No Man's Sky   \n577                      xboxone_974586226        We Happy Few (Game Preview)   \n578                      xboxone_983730484              ARK: Survival Evolved   \n\n         date          platform  \n0    2016 May        Battle.net  \n1    2016 May        Battle.net  \n2    2015 May  Epic Games Store  \n3    2012 Sep  Epic Games Store  \n4    2013 Sep  Epic Games Store  \n..        ...               ...  \n574  2017 Oct     Xbox Gamepass  \n575  2014 Dec     Xbox Gamepass  \n576  2016 Aug     Xbox Gamepass  \n577  2018 Aug     Xbox Gamepass  \n578  2017 Aug     Xbox Gamepass  \n\n[579 rows x 4 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>releaseKey</th>\n      <th>title</th>\n      <th>date</th>\n      <th>platform</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>battlenet_5272175</td>\n      <td>Overwatch</td>\n      <td>2016 May</td>\n      <td>Battle.net</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>battlenet_prometheus</td>\n      <td>Overwatch</td>\n      <td>2016 May</td>\n      <td>Battle.net</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>epic_860a4feefe2a4f48905ae86c61d5db64</td>\n      <td>Lifeless Planet (Premier Edition)</td>\n      <td>2015 May</td>\n      <td>Epic Games Store</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>epic_8e425d507bd6473dbb927f0fea8ef4f6</td>\n      <td>Torchlight 2</td>\n      <td>2012 Sep</td>\n      <td>Epic Games Store</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>epic_9d2d0eb64d5c44529cece33fe2a46482</td>\n      <td>Grand Theft Auto 5</td>\n      <td>2013 Sep</td>\n      <td>Epic Games Store</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>574</th>\n      <td>xboxone_945976112</td>\n      <td>Rush: A Disney Pixar Adventure</td>\n      <td>2017 Oct</td>\n      <td>Xbox Gamepass</td>\n    </tr>\n    <tr>\n      <th>575</th>\n      <td>xboxone_962495436</td>\n      <td>JUJU</td>\n      <td>2014 Dec</td>\n      <td>Xbox Gamepass</td>\n    </tr>\n    <tr>\n      <th>576</th>\n      <td>xboxone_964706972</td>\n      <td>No Man's Sky</td>\n      <td>2016 Aug</td>\n      <td>Xbox Gamepass</td>\n    </tr>\n    <tr>\n      <th>577</th>\n      <td>xboxone_974586226</td>\n      <td>We Happy Few (Game Preview)</td>\n      <td>2018 Aug</td>\n      <td>Xbox Gamepass</td>\n    </tr>\n    <tr>\n      <th>578</th>\n      <td>xboxone_983730484</td>\n      <td>ARK: Survival Evolved</td>\n      <td>2017 Aug</td>\n      <td>Xbox Gamepass</td>\n    </tr>\n  </tbody>\n</table>\n<p>579 rows × 4 columns</p>\n</div>"
      },
-     "execution_count": 459,
+     "execution_count": 503,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,6 +249,20 @@
      "name": "#%% Format Titles\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "source": [
+    "main_db = main_db.drop_duplicates(subset=['title', 'platform'], keep='first')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% Remove duplicates which have same title and platform\n"
+    }
+   },
+   "execution_count": 504,
+   "outputs": []
   }
  ],
  "metadata": {
