--- a/notebooks/clean_main_db.ipynb
+++ b/notebooks/clean_main_db.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 325,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 326,
    "outputs": [],
    "source": [
     "def import_database_from_sql(sql_query,db_path):\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 327,
    "outputs": [],
    "source": [
     "#Add any metadata needed to this list. Valid values are type names\n",
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 328,
    "outputs": [],
    "source": [
     "def extract_date(db):\n",
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 329,
    "outputs": [],
    "source": [
     "def create_platform(db):\n",
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 330,
    "outputs": [],
    "source": [
     "def remove_hidden_games_by_gog(db):\n",
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 331,
    "outputs": [],
    "source": [
     "def remove_manual_hidden_games_by_user(db):\n",
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 332,
    "outputs": [],
    "source": [
     "# Remove brackets and quotes around titlee\n",
@@ -261,28 +261,49 @@
      "name": "#%% Remove duplicates which have same title and platform\n"
     }
    },
-   "execution_count": 90,
+   "execution_count": 333,
    "outputs": []
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "Empty DataFrame\nColumns: [releaseKey, title, date, platform]\nIndex: []",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>releaseKey</th>\n      <th>title</th>\n      <th>date</th>\n      <th>platform</th>\n    </tr>\n  </thead>\n  <tbody>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 91,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
+   "execution_count": 334,
+   "outputs": [],
+   "source": [
+    "def create_tag(db):\n",
+    "\n",
+    "    # Import tags database\n",
+    "    tag_db_query = 'SELECT releaseKey, tag FROM UserReleaseTags'\n",
+    "    tag_db = import_database_from_sql(tag_db_query, global_imports.main_db_path)\n",
+    "    temp = db.merge(tag_db, how='left',left_on=['releaseKey'],right_on=['releaseKey'])\n",
+    "\n",
+    "    def create_status(x):\n",
+    "        pattern = re.compile(r\"S - (\\w+)\")\n",
+    "        if pattern.match(x):\n",
+    "            return pattern.match(x).group(1)\n",
+    "        return np.nan\n",
+    "\n",
+    "    def create_length(x):\n",
+    "        pattern = re.compile(r\"L - (\\w+)\")\n",
+    "        if pattern.match(x):\n",
+    "            return pattern.match(x).group(1)\n",
+    "        return np.nan\n",
+    "\n",
+    "    # Create Status and Length as two separate Columns\n",
+    "    temp['tag'] = temp['tag'].fillna('No tag')\n",
+    "    temp['Status'] = temp['tag'].apply(create_status)\n",
+    "    temp['Length'] = temp['tag'].apply(create_length)\n",
+    "    temp.drop(['tag'], axis=1, inplace=True)\n",
+    "    temp = temp.groupby('releaseKey')[['Status','Length']].first().reset_index()\n",
+    "    db = db.merge(temp, how='left', on='releaseKey')\n",
+    "    return db\n",
+    "\n",
+    "# Add the Status and Length to the main Table\n",
+    "main_db = create_tag(main_db)"
    ],
-   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%"
+     "name": "#%% Create Tag\n"
     }
    }
   }
