--- a/notebooks/clean_main_db_old.ipynb
+++ b/notebooks/clean_main_db_old.ipynb
@@ -240,7 +240,7 @@
     "    return temp\n",
     "\n",
     "# Add the Status and Length to the main Table\n",
-    "df = df.merge(create_tag(), how='left',left_on=['releaseKey'],right_on=['releaseKey'])"
+    "df = df.merge(create_tag(), how='left', on='releaseKey')"
    ],
    "metadata": {
     "collapsed": false,
