Added subscription databases

--- a/notebooks/clean_main_db.ipynb
+++ b/notebooks/clean_main_db.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -15,6 +15,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import global_imports\n",
+    "from src import xbox_spreadsheet, origin_parse\n",
     "import re\n",
     "import json\n",
     "\n",
@@ -26,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "def import_database_from_sql(sql_query,db_path):\n",
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "#Add any metadata needed to this list. Valid values are type names\n",
@@ -92,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "def extract_date(db):\n",
@@ -123,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "def create_platform(db):\n",
@@ -153,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "def remove_hidden_games_by_gog(db):\n",
@@ -176,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "def remove_manual_hidden_games_by_user(db):\n",
@@ -200,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "# Remove brackets and quotes around titlee\n",
@@ -251,8 +252,8 @@
     "    # Delete rows with same title in 'Other' Platform\n",
     "    dup = db[db.duplicated(subset=['title'], keep=False)].sort_values('title')\n",
     "    db = db.drop(dup[dup['platform'].str.match('Other')].index).reset_index(drop=True)\n",
+    "    db = db[~db['title'].str.contains('trial$',flags=re.IGNORECASE)]\n",
     "    return db\n",
-    "\n",
     "main_db = remove_duplicates(main_db)"
    ],
    "metadata": {
@@ -261,12 +262,12 @@
      "name": "#%% Remove duplicates which have same title and platform\n"
     }
    },
-   "execution_count": 333,
+   "execution_count": 9,
    "outputs": []
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "def create_tag(db):\n",
@@ -304,6 +305,117 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%% Create Tag\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "source": [
+    "def format_xbox(db):\n",
+    "    db = pd.DataFrame(db[0], columns=db[1]).reset_index(drop=True)\n",
+    "\n",
+    "    # Remove the header and make the first row as header\n",
+    "    new_header = db.iloc[0]\n",
+    "    db = db[1:]\n",
+    "    db.columns = new_header\n",
+    "    db.reset_index(drop=True, inplace=True)\n",
+    "\n",
+    "    # Remove Xbox Games and unnecessary columns from the list\n",
+    "    db = db.drop(['Metacritic', 'Genre (Giantbomb)', 'Completion', 'Age', 'Release', 'Months'], axis=1).reset_index(\n",
+    "        drop=True)\n",
+    "    db = db[~(db['System'] == 'Xbox One')]\n",
+    "    db = db.drop(['System'], axis=1).reset_index(drop=True)\n",
+    "    return db\n",
+    "\n",
+    "xbox_db = format_xbox(xbox_spreadsheet.import_xbox_gsheet())\n",
+    "xbox_db = format_titles(xbox_db, 'Game')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% Import Xbox Gamepass Databasse\n"
+    }
+   },
+   "execution_count": 11,
+   "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [],
+   "source": [
+    "def remove_xboxgamepass(db, xdb):\n",
+    "    temp = db.loc[db['platform'] == 'Xbox Gamepass'].copy()\n",
+    "    xtemp = xdb.loc[xdb['Status'].str.match(r'Active|Leaving Soon')].copy()\n",
+    "\n",
+    "    # Temporarily remove special characters and convert to lowercase for comparison\n",
+    "    def temp_format_xbox(x):\n",
+    "        x = x.lower()\n",
+    "        x = re.sub('\\s\\(.*\\)', '', x)\n",
+    "        x = re.sub('\\'', '', x)\n",
+    "        x = re.sub(': (\\w+\\sedition)', '', x)\n",
+    "        x = re.sub(': (\\w+\\scut)', '', x)\n",
+    "        x = re.sub(' iii', '3', x)\n",
+    "        x = re.sub(' ii', '2', x)\n",
+    "        x = re.sub(' iv', '4', x)\n",
+    "        x = re.sub(' ix', '9', x)\n",
+    "        x = re.sub(' xv', '15', x)\n",
+    "        x = re.sub('[^A-Za-z0-9]+', '', x)\n",
+    "        return x\n",
+    "\n",
+    "    temp.loc[:, 'title'] = temp['title'].apply(temp_format_xbox)\n",
+    "    xtemp.loc[:, 'Game'] = xtemp['Game'].apply(temp_format_xbox)\n",
+    "\n",
+    "    # Fetch index of all the games in main but not in Xbox Gamepass list and delete them\n",
+    "    out = temp[~temp['title'].isin(xtemp['Game'])].index\n",
+    "    db.drop(out, inplace=True)\n",
+    "    db.reset_index(drop=True, inplace=True)\n",
+    "    return db\n",
+    "\n",
+    "main_db = remove_xboxgamepass(main_db, xbox_db)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% Remove games not in XboX Gamepass. Some games removed from GP is still in main_db\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [],
+   "source": [
+    "def import_origin():\n",
+    "    basic, premiere = origin_parse.origin_games()\n",
+    "    data = pd.DataFrame(basic, columns=['Title', 'Subscription'])\n",
+    "    data = data.append(pd.DataFrame(premiere, columns=data.columns))\n",
+    "    data = data.sort_values('Title').reset_index(drop=True)\n",
+    "    return data\n",
+    "\n",
+    "origin_db = import_origin()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "main_db = main_db.rename(columns={\"title\": \"Title\", \"date\": \"Release\", \"platform\": \"Platform\"})\n",
+    "xbox_db = xbox_db.rename(columns={\"Game\": \"Title\"})\n",
+    "main_db.reset_index(drop = True, inplace = True)\n",
+    "xbox_db.reset_index(drop = True, inplace = True)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% Rename Columns\n"
     }
    }
   }
