Final touches to refactoring

--- a/notebooks/clean_main_db.ipynb
+++ b/notebooks/clean_main_db.ipynb
@@ -2,14 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 155,
    "metadata": {
     "collapsed": true,
     "pycharm": {
      "name": "#%% import statements\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[WinError 2] The system cannot find the file specified: 'hard_to_choose'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mFileNotFoundError\u001B[0m                         Traceback (most recent call last)",
+      "\u001B[1;32m<ipython-input-155-354e2c2b6c72>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m     10\u001B[0m \u001B[1;32mimport\u001B[0m \u001B[0mos\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     11\u001B[0m \u001B[1;32mif\u001B[0m \u001B[0mos\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mgetcwd\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0msplit\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m'\\\\'\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;33m-\u001B[0m\u001B[1;36m1\u001B[0m\u001B[1;33m]\u001B[0m \u001B[1;33m!=\u001B[0m \u001B[0mglobal_imports\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mroot_folder\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 12\u001B[1;33m     \u001B[0mos\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mchdir\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mglobal_imports\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mroot_folder\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     13\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;31mFileNotFoundError\u001B[0m: [WinError 2] The system cannot find the file specified: 'hard_to_choose'"
+     ]
+    }
+   ],
    "source": [
     "import sqlite3\n",
     "import pandas as pd\n",
@@ -27,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "def import_database_from_sql(sql_query,db_path):\n",
@@ -52,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "#Add any metadata needed to this list. Valid values are type names\n",
@@ -78,7 +90,7 @@
     "# Group by releaseKey since the data is in its own rows. Fill row with NAN if every row is NAN\n",
     "    db = db.groupby('releaseKey', as_index=True).agg(lambda x: np.nan if x.isnull().all()\n",
     "    else x.dropna()).reset_index()\n",
-    "    db = db.set_index(np.arange(1, len(db) + 1))\n",
+    "    db = db.set_index(np.arange(0, len(db)))\n",
     "    return db\n",
     "\n",
     "\n",
@@ -93,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "def extract_date(db):\n",
@@ -124,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "def create_platform(db):\n",
@@ -154,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "def remove_hidden_games_by_gog(db):\n",
@@ -177,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "def remove_manual_hidden_games_by_user(db):\n",
@@ -201,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "# Remove brackets and quotes around titlee\n",
@@ -262,12 +274,12 @@
      "name": "#%% Remove duplicates which have same title and platform\n"
     }
    },
-   "execution_count": 9,
+   "execution_count": null,
    "outputs": []
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "def create_tag(db):\n",
@@ -336,12 +348,12 @@
      "name": "#%% Import Xbox Gamepass Databasse\n"
     }
    },
-   "execution_count": 11,
+   "execution_count": null,
    "outputs": []
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "def remove_xboxgamepass(db, xdb):\n",
@@ -383,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "def import_origin():\n",
@@ -398,7 +410,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%% Import Origin Access Database\n"
     }
    }
   },
@@ -416,6 +428,89 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%% Rename Columns\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def group_platform(db):\n",
+    "    temp = db.groupby('Title').agg({'Platform':'; '.join})\n",
+    "    db = db.merge(temp, how='inner',left_on=['Title'],right_on=['Title'])\n",
+    "    db = db.drop('Platform_x', axis=1)\n",
+    "    db = db.drop_duplicates(subset=['Title', 'Platform_y'], keep='last')\n",
+    "    db = db.reset_index(drop=True)\n",
+    "    db = db.rename(columns={\"Platform_y\": \"Platform\"})\n",
+    "    return db\n",
+    "\n",
+    "main_db = group_platform(main_db)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% Group Platforms\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def manual_tagging(db):\n",
+    "    with open('data/tag.txt') as f:\n",
+    "        row = f.read().split('\\n')\n",
+    "        for i in row:\n",
+    "            col = i.split(',')\n",
+    "            db.loc[db['Title'].str.contains(col[0]), 'Length'] = col[1]\n",
+    "            db.loc[db['Title'].str.contains(col[0]), 'Status'] = col[2]\n",
+    "    return db\n",
+    "\n",
+    "main_db = manual_tagging(main_db).reset_index(drop=True)\n",
+    "\n",
+    "# Sort values by Title ignoring case\n",
+    "main_db['Upper'] = main_db['Title'].str.upper()\n",
+    "main_db.sort_values(by='Upper', inplace=True)\n",
+    "del main_db['Upper']"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% Manually tag games where tags are glitched\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "os.chdir('excel')\n",
+    "dbase_dict = {'Games': main_db, 'Xbox Gamepass': xbox_db, 'Origin Access': origin_db}\n",
+    "\n",
+    "def write_excel(data_dict):\n",
+    "    filename = 'Games.xlsx'\n",
+    "    writer = pd.ExcelWriter(filename, engine='xlsxwriter')\n",
+    "    for sheetname, db in data_dict.items():  # loop through `dict` of dataframes\n",
+    "        db.to_excel(writer, sheet_name=sheetname, index=False)  # send df to writer\n",
+    "        worksheet = writer.sheets[sheetname]  # pull worksheet object\n",
+    "        for idx, col in enumerate(db):  # loop through all columns\n",
+    "            series = db[col]\n",
+    "            max_len = max((\n",
+    "                series.astype(str).map(len).max(),  # len of largest item\n",
+    "                len(str(series.name))  # len of column name/header\n",
+    "            )) + 1  # adding a little extra space\n",
+    "            worksheet.set_column(idx, idx, max_len)  # set column width\n",
+    "    writer.save()\n",
+    "\n",
+    "write_excel(dbase_dict)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% Write final output to excel\n"
     }
    }
   }
